# YT-SOA

./: Makefile  README.md  env.bat  env.sh  make.bat  setBaseline.bat  setenv.cmd
package/: make-full-version.bat  make.bat  repo.ior
package/soa-3rdparty/: CMakeLists.txt
package/soa-3rdparty/conf/linux-arm/: Makefile  capicxx-someip-runtime.patch  vsomeip.patch
package/soa-3rdparty/conf/linux-x11/: Makefile
package/soa-3rdparty/conf/qnx700-aarch64/: Makefile  poco.patch  vsomeip.patch
package/soa-3rdparty/conf/qnx700-x86_64/: Makefile  capicxx-core-runtime.patch  capicxx-someip-runtime.patch  poco.patch
package/soa-3rdparty/conf/win32/: capicxx-core-runtime.patch  capicxx-someip-runtime.patch  make.bat  vsomeip.patch
package/soa-com/: CMakeLists.txt
package/soa-com/example/: CMakeLists.txt
package/soa-com/example/test-controller/: CMakeLists.txt  ControllerApp.cpp
package/soa-com/example/test-listener/: CMakeLists.txt  ListenerApp.cpp
package/soa-com/include/: CMakeLists.txt
package/soa-com/src/: CMakeLists.txt
package/soa-com/src/comLib/: CMakeLists.txt  Controller.cpp  Listener.cpp  Model.cpp  Model.h
package/soa-com/src/comLib/dds/: Common.h  DataReaderListener.h  Publication.h  Subscription.h
package/soa-com/src/comLib/someip/: ControllerStubImp.cpp  ControllerStubImp.h  ListenerStubImp.cpp  ListenerStubImp.h  ServiceHelper.h
package/soa-com/src/comManage/: CMakeLists.txt  Service.cpp  Service.h
package/soa-env/: CMakeLists.txt
package/soa-env/win32/: commonapi.ini  soa.com.startup.bat  soa.env.bat
tool/win32/commonapi-generator/: .gitignore
tool/win32/commonapi_someip_generator/: .gitignore
